// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataVisibility Snapshots maxWidthBottomRow set 1`] = `
<div
  class="full-width csm-data-visibility"
>
  <div
    class="pa-4 pb-100 v-card v-sheet theme--light"
  >
    <div
      class="layout row justify-space-between"
    >
      <a
        class="mt-2 title primary--text"
        href="#"
      >
        
  Data visibility

      </a>
       
      <button
        class="mr-0 mt-2 small-btn v-btn v-btn--icon v-btn--large theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon grey--text far fa-times-circle theme--light"
          />
        </div>
      </button>
    </div>
     
    <ul
      class="v-expansion-panel mt-3 mb-3 theme--light"
    >
      <li
        class="v-expansion-panel__container"
        tabindex="0"
      >
        <div
          class="v-expansion-panel__header"
        >
          <div
            class="title"
          >
            
            Visible Parameters
          
          </div>
          <div
            class="v-expansion-panel__header__icon"
            name="fade-transition"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              keyboard_arrow_down
            </i>
          </div>
        </div>
        <div
          class="v-expansion-panel__body"
          style="display: none;"
        >
            
          <div
            class="mt-4"
          >
            <draggable-stub
              clone="function (t){return t}"
              element="div"
              value="event_location,square_created_at,total_money,total_tax_money,total_discount_money"
            >
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Event / Location"
                          role="checkbox"
                          type="checkbox"
                          value="event_location"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Event / Location
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Creation date"
                          role="checkbox"
                          type="checkbox"
                          value="square_created_at"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Creation date
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Total"
                          role="checkbox"
                          type="checkbox"
                          value="total_money"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Total
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Tax total"
                          role="checkbox"
                          type="checkbox"
                          value="total_tax_money"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Tax total
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Total discount"
                          role="checkbox"
                          type="checkbox"
                          value="total_discount_money"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Total discount
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </draggable-stub>
          </div>
        </div>
      </li>
    </ul>
     
    <div
      class="v-input v-text-field v-text-field--placeholder theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-input__prepend-inner"
          >
            <div
              class="v-input__icon v-input__icon--prepend-inner"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                search
              </i>
            </div>
          </div>
          <div
            class="v-text-field__slot"
          >
            <input
              placeholder="Search parameter"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
     
    <ul
      class="v-expansion-panel mt-0 theme--light"
    >
      <li
        class="v-expansion-panel__container"
        tabindex="0"
      >
        <div
          class="v-expansion-panel__header"
        >
          <div
            class="title"
          >
            
            Parameters
          
          </div>
          <div
            class="v-expansion-panel__header__icon"
            name="fade-transition"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              keyboard_arrow_down
            </i>
          </div>
        </div>
        <div
          class="v-expansion-panel__body"
          style="display: none;"
        >
            
          <div
            class="mt-4"
          >
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Total Service Charge"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Total Service Charge
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Update date"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Update date
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Items"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Items
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Reference ID"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Reference ID
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
   
  <div
    class="layout foodfleet-datavisibility__darkbackground fixed-row row py-4"
    style="width: 200px;"
  >
    <div
      class="flex mr-2 ml-4 sm6"
    >
      <button
        class="v-btn v-btn--block v-btn--large theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
        Clear
      
        </div>
      </button>
    </div>
     
    <div
      class="flex ml-2 mr-4 sm6"
    >
      <button
        class="primary v-btn v-btn--block v-btn--large theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
        Apply
      
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`DataVisibility Snapshots parameters and visibleParameters set 1`] = `
<div
  class="full-width csm-data-visibility"
>
  <div
    class="pa-4 pb-100 v-card v-sheet theme--light"
  >
    <div
      class="layout row justify-space-between"
    >
      <a
        class="mt-2 title primary--text"
        href="#"
      >
        
  Data visibility

      </a>
       
      <button
        class="mr-0 mt-2 small-btn v-btn v-btn--icon v-btn--large theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon grey--text far fa-times-circle theme--light"
          />
        </div>
      </button>
    </div>
     
    <ul
      class="v-expansion-panel mt-3 mb-3 theme--light"
    >
      <li
        class="v-expansion-panel__container"
        tabindex="0"
      >
        <div
          class="v-expansion-panel__header"
        >
          <div
            class="title"
          >
            
            Visible Parameters
          
          </div>
          <div
            class="v-expansion-panel__header__icon"
            name="fade-transition"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              keyboard_arrow_down
            </i>
          </div>
        </div>
        <div
          class="v-expansion-panel__body"
          style="display: none;"
        >
            
          <div
            class="mt-4"
          >
            <draggable-stub
              clone="function (t){return t}"
              element="div"
              value="event_location,square_created_at,total_money,total_tax_money,total_discount_money"
            >
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Event / Location"
                          role="checkbox"
                          type="checkbox"
                          value="event_location"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Event / Location
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Creation date"
                          role="checkbox"
                          type="checkbox"
                          value="square_created_at"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Creation date
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Total"
                          role="checkbox"
                          type="checkbox"
                          value="total_money"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Total
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Tax total"
                          role="checkbox"
                          type="checkbox"
                          value="total_tax_money"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Tax total
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="layout dotted-bottom mt-2 row"
              >
                <div
                  class="v-input my-0 v-input--selection-controls v-input--checkbox v-input--is-label-active v-input--is-dirty theme--light"
                >
                  <div
                    class="v-input__prepend-outer"
                  >
                    <div
                      class="v-input__icon v-input__icon--prepend"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon fa fa-th theme--light"
                      />
                    </div>
                  </div>
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                    >
                      <div
                        class="v-input--selection-controls__input"
                      >
                        <input
                          aria-checked="true"
                          aria-label="Total discount"
                          role="checkbox"
                          type="checkbox"
                          value="total_discount_money"
                        />
                        <div
                          class="v-input--selection-controls__ripple primary--text"
                        />
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light primary--text"
                        >
                          check_box
                        </i>
                      </div>
                      <label
                        aria-hidden="true"
                        class="v-label theme--light"
                        style="left: 0px; position: relative;"
                      >
                        Total discount
                      </label>
                    </div>
                    <div
                      class="v-messages theme--light"
                    >
                      <span
                        class="v-messages__wrapper"
                        name="message-transition"
                        tag="div"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </draggable-stub>
          </div>
        </div>
      </li>
    </ul>
     
    <div
      class="v-input v-text-field v-text-field--placeholder theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-input__prepend-inner"
          >
            <div
              class="v-input__icon v-input__icon--prepend-inner"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                search
              </i>
            </div>
          </div>
          <div
            class="v-text-field__slot"
          >
            <input
              placeholder="Search parameter"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
     
    <ul
      class="v-expansion-panel mt-0 theme--light"
    >
      <li
        class="v-expansion-panel__container"
        tabindex="0"
      >
        <div
          class="v-expansion-panel__header"
        >
          <div
            class="title"
          >
            
            Parameters
          
          </div>
          <div
            class="v-expansion-panel__header__icon"
            name="fade-transition"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
              style="font-size: 16px;"
            >
              keyboard_arrow_down
            </i>
          </div>
        </div>
        <div
          class="v-expansion-panel__body"
          style="display: none;"
        >
            
          <div
            class="mt-4"
          >
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Total Service Charge"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Total Service Charge
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Update date"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Update date
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Items"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Items
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="layout dotted-bottom mt-2 row"
            >
              <div
                class="v-input my-0 v-input--selection-controls v-input--checkbox theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        aria-label="Reference ID"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <label
                      aria-hidden="true"
                      class="v-label theme--light"
                      style="left: 0px; position: relative;"
                    >
                      Reference ID
                    </label>
                  </div>
                  <div
                    class="v-messages theme--light"
                  >
                    <span
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </li>
    </ul>
  </div>
   
  <div
    class="layout foodfleet-datavisibility__darkbackground fixed-row row py-4"
    style="width: 422px;"
  >
    <div
      class="flex mr-2 ml-4 sm6"
    >
      <button
        class="v-btn v-btn--block v-btn--large theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
        Clear
      
        </div>
      </button>
    </div>
     
    <div
      class="flex ml-2 mr-4 sm6"
    >
      <button
        class="primary v-btn v-btn--block v-btn--large theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
        Apply
      
        </div>
      </button>
    </div>
  </div>
</div>
`;
